# twitter_like_blog

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
backend/: settings.py  urls.py  wsgi.py
musker/: admin.py  forms.py  models.py  views.py
musker/migrations/: 0001_initial.py
musker/templates/: navbar.html  profile.html
