[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = ""
authors = ["matheush <matheus@matheus.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
